--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="style.css" />
   <!-- ajax linking -->
 
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/7.12.0/simple-icons.min.css">
   <style>
       .simple-icon {
@@ -61,7 +61,7 @@
             class="bx bxl-linkedin-square"></i></a>
         <a href="https://github.com/Madhanraj-97?tab=repositories" target="_blank"><i class="bx bxl-github"></i></a>
       </div>
-      <a href="./final resume.pdf" class="home-btn " download>Download CV</a>
+      <a href="./madhan.pdf" class="home-btn " download>Download CV</a>
       <a href="#projects" class="home-btn">My Projects</a>
     </div>
     <div class="home-image">
@@ -87,12 +87,6 @@
     </div>
     <h5 class="edu-head">Educational Details</h5>
     <div class="education-div">
-      <!-- <div class="education">
-          <h4>Pyth Full Stack Development</h4>
-          <p>July 2022 - January 2023</p>
-          <p>Python Training Institute</p>
-          <p>Bengaluru, Karnataka.</p>
-        </div> -->
       <div class="education">
         <h4>BCA(Bachelor Computer Applications)</h4>
         <p>2015 - 2018</p>
