add project link

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   <!-- ajax linking -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/7.12.0/simple-icons.min.css">
   <style>
-      .simple-icon {
-          width: 24px;
-          height: 24px;
-          vertical-align: middle;
-      }
+    .simple-icon {
+      width: 24px;
+      height: 24px;
+      vertical-align: middle;
+    }
   </style>
 </head>
 
@@ -188,20 +189,19 @@
         <p>A fully responsive todo app with authentication by using the following tasks can be done,<br>
           User registration and login ,
           Performing CRUD operations, user can add new tasks, read tasks,edit the existing tasks and delete tasks,
-          It also have the search functionality, So we can retrive the specified tasks we need,
-          The app is hosted on python anywhere.
-        <h6> Live demo of the project for tesing: <a href="https://nidhing.pythonanywhere.com/" target="_blank">Click
+          The app is hosted on aws using elasticbeanstalk and RDS .
+        <h6> Live demo of the project for tesing: <a href="http://todowebapp.ap-south-1.elasticbeanstalk.com/" target="_blank">Click
             Here</a></h6>
 
 
 
-        <h6> Link to GitHub repo: <a href=" https://github.com/nidhinkrishna/todo-app-using-django.git"
+        <h6> Link to GitHub repo: <a href=" https://github.com/Madhanraj-97/ToDoList.git"
             target="_blank">Click Here</a></h6>
 
 
         </p>
         <br>
-        <h6><span class="tech">Technologies Used:</span>Python, Django, HTML-5, CSS-3, Sqlite database
+        <h6><span class="tech">Technologies Used:</span>Java, JDBC, servlet API, HTML-5, CSS-3, MySQL database
         </h6>
 
       </div>
@@ -281,7 +281,7 @@
   <!-- Footer design -->
   <footer class="footer">
     <div class="footer-text">
-      <p >Copyright &copy; <span id="year"></span> by madhanraj | All rights reserved</p>
+      <p>Copyright &copy; <span id="year"></span> by madhanraj | All rights reserved</p>
 
       <div class="top-icon">
         <a href="#home"> <i class='bx bx-arrow-to-top'></i></a>
