--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- ajax linking -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-icons/7.12.0/simple-icons.min.css">
   <style>
     .simple-icon {
@@ -152,7 +152,7 @@
   <section class="projects" id="projects">
     <div class="projects-content">
       <h3>My <span>Projects</span></h3>
-      <div class="projects-list">
+      <!-- <div class="projects-list">
         <h5>E-Commerce</h5>
         <p>
           A Feauture Rich E-commerce app for mobiles.
@@ -183,7 +183,7 @@
 
       </div>
 
-
+ -->
       <div class="projects-list">
         <h5>To Do App</h5>
         <p>A fully responsive todo app with authentication by using the following tasks can be done,<br>
@@ -206,7 +206,7 @@
 
       </div>
 
-      <div class="projects-list">
+      <!-- <div class="projects-list">
         <h5>AUTHENTICATION SYSTEM</h5>
         <p>I developed an authentication system using django with the following features,<br>
           User regsitration and login using custom user model,
@@ -257,7 +257,7 @@
             Here</a> </h6>
         <h6>Quotes Generator using Javascript: <a href="https://github.com/nidhinkrishna/javascript-basic-projects.git"
             target="_blank">Click Here</a> </h6>
-      </div>
+      </div> -->
 
     </div>
   </section>
