--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
         <p>2015 - 2018</p>
         <p>Hindusthan College of Arts & Science</p>
         <p>Under Bharathiar University</p>
-        <p>Coimbatore, TamilNadu.</p>
+        <p>Coimbatore, TamilNadu</p>
       </div>
       <div class="education">
         <h4>Higher Secondary</h4>
         <p>2013 - 2015</p>
         <p>Bishop Ubagaraswamy Higher Secondary School</p>
-        <p>Tirupur, TamilNadu.</p>
+        <p>Tirupur, TamilNadu</p>
       </div>
       <div class="education" id="education">
         <h4>High School</h4>
         <p>2013</p>
         <p>Bishop Ubagaraswamy Higher Secondary School</p>
-        <p>Tirupur, TamilNadu.</p>
+        <p>Tirupur, TamilNadu</p>
       </div>
     </div>
   </section>
@@ -190,8 +190,8 @@
           User registration and login ,
           Performing CRUD operations, user can add new tasks, read tasks,edit the existing tasks and delete tasks,
           The app is hosted on aws using elasticbeanstalk and RDS .
-        <h6> Live demo of the project for tesing: <a href="http://todowebapp.ap-south-1.elasticbeanstalk.com/" target="_blank">Click
-            Here</a></h6>
+        <!-- <h6> Live demo of the project for tesing: <a href="http://todowebapp.ap-south-1.elasticbeanstalk.com/" target="_blank">Click
+            Here</a></h6> -->
 
 
 
