remove aws link

--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
         <h5>To Do App</h5>
         <p>A fully responsive todo app with authentication by using the following tasks can be done,<br>
           User registration and login ,
-          Performing CRUD operations, user can add new tasks, read tasks,edit the existing tasks and delete tasks,
-          The app is hosted on aws using elasticbeanstalk and RDS .
+          Performing CRUD operations, user can add new tasks, read tasks,edit the existing tasks and delete tasks.
         <!-- <h6> Live demo of the project for tesing: <a href="http://todowebapp.ap-south-1.elasticbeanstalk.com/" target="_blank">Click
             Here</a></h6> -->
 
