--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             class="bx bxl-linkedin-square"></i></a>
         <a href="https://github.com/Madhanraj-97?tab=repositories" target="_blank"><i class="bx bxl-github"></i></a>
       </div>
-      <a href="./madhan.pdf" class="home-btn " download>Download CV</a>
+      <a href="./Madhanraj_Java Fullstack Resume.pdf" class="home-btn " download>Download CV</a>
       <a href="#projects" class="home-btn">My Projects</a>
     </div>
     <div class="home-image">
