changes in title

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="home-content">
       <h3>Hello, It's Me</h3>
       <h1>Madhanraj S</h1>
-      <h3>And I'm <span>Full Stack Web Developer</span></h3>
+      <h3>And I'm <span>Full Stack Developer</span></h3>
       <p>
         Based on Chennai, India and curious to learn more about web
         developing and designing, <br />
