--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
       </div>
       <h5>Frontend</h5>
       <div class="skills-list">
-        <h1><i class="bx bxl-javascript"></i>Javascript</h1>
-        <h1><i class="bx bxl-html5"></i>HTML-5</h1>
-        <h1><i class="bx bxl-css3"></i>CSS-3</h1>
-        <h1><i class="bx bxl-bootstrap"></i>Bootstrap</h1>
+        <h1><i class="bx bxl-javascript"></i> Javascript</h1>
+        <h1><i class="fa-brands fa-react"></i></i> React JS</h1>
+        <h1><i class="bx bxl-html5"></i> HTML-5</h1>
+        <h1><i class="bx bxl-css3"></i> CSS-3</h1>
+        <h1><i class="bx bxl-bootstrap"></i> Bootstrap</h1>
       </div>
       <h5>Operating Systems</h5>
       <div class="skills-list">
