add bus ticket project

--- a/index.html
+++ b/index.html
@@ -153,50 +153,53 @@
   <section class="projects" id="projects">
     <div class="projects-content">
       <h3>My <span>Projects</span></h3>
-      <!-- <div class="projects-list">
-        <h5>E-Commerce</h5>
+      <div class="projects-list">
+        <h5>Bus Ticket book website</h5>
         <p>
-          A Feauture Rich E-commerce app for mobiles.
-          Implemented neccessary e-commerce functionalities like product listing, cart, orders, dashboard etc.
-          <br>Additional features includes,
-          <li>Brand wise display,filter by price range and search functionality.</li>
-          <li>Dashboard with order history ,Invoice and more.</li>
-          <li>Cart Management without login using Session Id.</li>
-          <li>Reviews and rating management. </li>
-          <li>Product gallery for all products.</li>
-          <li>Out of stock and trending alerts.</li>
-          <li>Payment Integration : <strong>Paypal</strong></li>
+          A fully responsive full-stack web application for booking bus tickets, including admin and user modules with
+          authentication.<br> The application allows users to book and cancel tickets, while admins can manage buses,
+          schedules.
+          <p><span>Features:</span></p>
+        <ul class="features">
+          <li>User Authentication: Users can register, log in, and manage their accounts.</li>
+          <li>Admin Authentication: Admins can register, log in, and manage bus schedules and buses.</li>
+          <li>CRUD Operations: Both admins and users can perform CRUD operations. Admins can add, update, or delete
+            buses and</li>
+          <li>schedules, while users can view available buses and book or cancel tickets.</li>
+          <li>Seat Selection: Users can choose available seats for their bookings.</li>
+          <li>Real-time Updates: Users see real-time information regarding bus availability and booking statuses.</li>
+          <li>Responsive UI: The application is fully responsive and works seamlessly across devices.</li>
+        </ul>
+
+        <h6> Live demo of the project for tesing: <a href="https://bus-ticketz.netlify.app/" target="_blank">Click
+            Here</a></h6>
 
 
-        <h6> Live demo of the project for tesing: <a href="https://mobilegarage.pythonanywhere.com/"
-            target="_blank">Click Here</a></h6>
 
-
-
-        <h6> Link to GitHub repo: <a href=" https://github.com/nidhinkrishna/Ecommerce/" target="_blank">Click Here</a>
+        <h6> Link to GitHub repo: <a href="https://github.com/Madhanraj-97/Ticket-Booking-web-app-Front-End-code" target="_blank">Frontend code</a><a href="https://github.com/Madhanraj-97/Ticket-Booking-App-Back-End-code">Backend code</a>
         </h6>
 
 
         </p>
         <br>
-        <h6><span class="tech">Technologies Used:</span>Python, Django, Web tech, Bootstrap, Js, Sqlite3,Python anywhere
+        <h6><span class="tech">Technologies Used:</span>java,Springboot,Hibernate,MySQL,React.js,HTML5,CSS
         </h6>
 
       </div>
 
- -->
+
       <div class="projects-list">
         <h5>To Do App</h5>
         <p>A fully responsive todo app with authentication by using the following tasks can be done,<br>
           User registration and login ,
           Performing CRUD operations, user can add new tasks, read tasks,edit the existing tasks and delete tasks.
-        <!-- <h6> Live demo of the project for tesing: <a href="http://todowebapp.ap-south-1.elasticbeanstalk.com/" target="_blank">Click
+          <!-- <h6> Live demo of the project for tesing: <a href="http://todowebapp.ap-south-1.elasticbeanstalk.com/" target="_blank">Click
             Here</a></h6> -->
 
 
 
-        <h6> Link to GitHub repo: <a href=" https://github.com/Madhanraj-97/ToDoList.git"
-            target="_blank">Click Here</a></h6>
+        <h6> Link to GitHub repo: <a href=" https://github.com/Madhanraj-97/ToDoList.git" target="_blank">Click Here</a>
+        </h6>
 
 
         </p>
