add bus ticket project

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div class="projects-content">
       <h3>My <span>Projects</span></h3>
       <div class="projects-list">
-        <h5>Bus Ticket book website</h5>
+        <h5>Bus Ticket booking website</h5>
         <p>
           A fully responsive full-stack web application for booking bus tickets, including admin and user modules with
           authentication.<br> The application allows users to book and cancel tickets, while admins can manage buses,
